@@ -17,8 +17,6 @@
 
 package org.keycloak.protocol.oid4vc.model;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -126,7 +124,8 @@ public class CredentialIssuer {
         if (credentialsSupported == null) {
             throw new IllegalArgumentException("credentialsSupported cannot be null");
         }
-        this.credentialsSupported = Collections.unmodifiableMap(new HashMap<>(credentialsSupported));
+        credentialsSupported.forEach((k, v) -> v.setId(k));
+        this.credentialsSupported = Map.copyOf(credentialsSupported);
         return this;
     }
 
